fix: form wrap

--- a/frontend/src/components/UrlForm.css
+++ b/frontend/src/components/UrlForm.css
@@ -59,7 +59,6 @@ input:focus {
   background-color: #f6f6f6;
   padding: 40px;
   border-radius: 20px;
-  flex-wrap: wrap;
   margin: 30px;
   /* width: 80%; */
 }
